# workspace

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONVENTIONS.md  SUBMODULES.md  TODO.md  bashrc.example  readme.md
ai/room-acoustics-sim/: .gitignore  ARCHITECTURE.md  README.md  USER_GUIDE.md  start.bat  start.sh
apps/task-queue-manager/: package.json  task-queue-requirements-updated.md
archive/: README.md
archive/instructions/: electron.md  github cicd.md  gitignore.md  testing.md
archive/task-queue-app/: .gitignore  changelog.md  goals.md  index.html  package-lock.json  tailwind.config.js
archive/task-queue-app/src-tauri/: Cargo.toml
archive/task-queue-app/src-tauri/src/: commands.rs  main.rs
archive/task-queue-app/src-tauri/src/db/: models.rs
archive/task-queue-app/src-tauri/src/tasks/: tar.rs  transcode.rs
automotive/mopar/: diagram_scraper.py  models.py  readme.md  requirements.txt  scraper.py
automotive/motorcycles/: .gitignore
cronjob_manager/: ARCHITECTURE.md  CronJobDetail.css  CronJobDetail.js  CronJobForm.css  CronJobList.js  EXAMPLES.md  PROJECT_OVERVIEW.md  TROUBLESHOOTING.md  docker-compose.yml  nginx.conf  package.json
desktop_jenkins/: requirements.md
desktop_jenkins/old_requirements/: requirements.md
desktop_jenkins/src/: package-lock.json  package.json  requirements.md  vite.config.ts
drones/: README.md
drones/cinelog35-tof/: README.md  inventory.md
drones/inventory/: bom.md  shared-gear.md
drones/jet-catamaran/: README.md  all_stations_overlaid_v1.dxf  inventory.md  sponson_variables_v2.csv
drones/pavo-femto/: README.md  inventory.md
drones/pavo20-pro-2/: README.md  betaflight.md  betaflight_config.cfg  inventory.md
drones/x500/: README.md  inventory.md
embedded/: TODO.md
embedded/led-vu-meter/: .gitignore  README.md  skills-lock.json
embedded/media-remote-claude/: .gitignore  README.md  platformio.ini
embedded/toolchain/: .gitignore  README.md  manifest.txt  setup-kicad.sh  setup.sh
infra/: TODO.md
infra/otel-prom-stack/: client_connection_guide.md  docker-compose.yml  grafana-dashboard.yml  otel-collector-config.yaml  prometheus.yml  readme.md
infra/prometheus-stack/: docker-compose.yml  prometheus.yml
infra/searxng/: docker-compose.yml  readme.md
instructions/: slam_impl_todo.md
media-apps/media-app-3/: CLAUDE.md  package-lock.json  package.json  readme.md  tailwind.config.js  tsconfig.web.json
media-apps/photo_library_manager/: .gitignore  models.py  readme.md
media-remote-claude/src/: main.cpp
media/media-app-3/: CLAUDE.md  electron.vite.config.ts  package-lock.json  package.json
meta/: README.md  TODO.md
microcontroller-projects/can-simulator/: CHANGELOG.md  README.md
microcontroller-projects/media_remote/: platformio.ini  serial_logger.py
photo_library_manager/: face_desktop.py  requirements.txt
robotics/livox_handheld_scanner/: .gitignore  ARCHITECTURE.md  HANDOFF.md  README.md  cam_lidar_calib_handoff.md  plane_detection_handoff.md  voxel_color_map_handoff.md  voxel_color_map_pt_2.md
robotics/livox_handheld_scanner/src/scanner_bringup/: CMakeLists.txt  package.xml
robotics/livox_handheld_scanner/src/scanner_bringup/config/: coverage.yaml  horizon.json  meshing.yaml  meshing_dense.yaml  point_lio_horizon.yaml  point_lio_horizon_dense.yaml  realsense.yaml
robotics/livox_handheld_scanner/src/scanner_bringup/launch/: control_panel.launch.py  scanner.launch.py
robotics/livox_handheld_scanner/src/scanner_bringup/rviz/: scanner.rviz
robotics/livox_handheld_scanner/src/scanner_coverage/: package.xml  setup.cfg  setup.py
robotics/livox_handheld_scanner/src/scanner_coverage/scanner_coverage/: coverage_node.py
robotics/livox_handheld_scanner/src/scanner_meshing/: package.xml  setup.cfg  setup.py
robotics/livox_handheld_scanner/src/scanner_meshing/scanner_meshing/: vdb_meshing_node.py
task-queue-app/: README.md  goals.md  package-lock.json  package.json  system_packages.md
task-queue-app-electron/task-queue-manager/: package.json  tailwind.config.js
task-queue-app/src/: App.tsx  index.css  types.ts
task-queue-app/src-tauri/: tauri.conf.json
task-queue-manager/: index.html  package-lock.json  package.json  vite.config.ts
task-queue-manager/src-tauri/: Cargo.toml  tauri.conf.json
task-queue-manager/src-tauri/src/: commands.rs  database.rs  error.rs  lib.rs  main.rs  models.rs
testing/iggy/: docker-compose.yml  producer.py
tools/cronjob-manager/: App.css  App.js  CronJobForm.js  CronJobList.css  Makefile  PROJECT_OVERVIEW.md:Zone.Identifier  QUICKSTART.md  README.md  cronjob_controller.go  deployment.yaml  go.mod  index.html  main.go  main.py  requirements.txt
web-scrapers/imdb-web-scrape/: DatabaseConnection.py  IMDBMovie.py  IMDBMovieService.py  Main.py
web-scrapers/manga-scraper/: readme.md  scraper.py
wiki-app/: .env.docker  .env.example  .gitignore  BULK_IMPORT.md  CHANGELOG.md  CLAUDE.md  README.md  SEMANTIC_SEARCH_FRONTEND.md  SEMANTIC_SEARCH_QUICKSTART.md  create_migration.py  create_sample_archive.py  docker-compose.yml  requirements.txt  run.py
wiki-app/.github/: copilot-instructions.md
wiki-app/app/: __init__.py  config.py
wiki-app/embedding_service/: README.md  app.py  requirements.txt
(+403 files in other folders)
