[package]
name = "task-queue-manager"
version = "0.1.0"
description = "A desktop task queue manager for file processing workflows"
authors = ["Task Queue Manager"]
edition = "2021"

[lib]
name = "task_queue_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6", features = ["serde"] }
async-trait = "0.1"
thiserror = "1"
tokio-util = { version = "0.7", features = ["rt"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
glob = "0.3"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
